--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,7 +21,7 @@ jobs:
       run: npm ci
 
     - name: Update JSON
-      run: node updateJson.js
+      run: node getData.js
       env:
         API_KEY: ${{ secrets.API_KEY }}
 
