--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: Update JSON
 
 on:
   schedule:
-    - cron: '0 0 * * *' # This will run the action every day at midnight
+    - cron: '0 0 * * 0' # This will run the action every Sunday at midnight
   workflow_dispatch:
 
 jobs:
