--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,18 +12,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        node-version: '16'
+        python-version: '3.8'
 
     - name: Install dependencies
-      run: npm ci
+      run: pip install -r requirements.txt
 
     - name: Update JSON
-      run: node getData.js
-      env:
-        API_KEY: ${{ secrets.API_KEY }}
+      run: python generate_data.py
 
     - name: Commit and push
       run: |
